# portfolio

./: .gitignore  .pylintrc  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pylint.yml  python-package.yml
02_quant_methods/: m1_l04_c04_stock_data.ipynb
08_derivatives/: interest_rate_futures.ipynb
10_portfolio_management/: 13_asset_allocation.ipynb  13_asset_allocation.m  13_asset_allocation.r
2_quant_methods/: m1_l04_c04_stock_data.ipynb
8_derivatives/: interest_rate_futures.ipynb
Python/ai4trading/: m1_l04_c04_stock_data.ipynb
Python/package/: fct_to_load_prices.py
john_hull/options_futures_derivatives/: chap6_answer.ipynb
notebooks/derivatives/: interest_rate_futures.ipynb
notebooks/portfolio_management/: Index-Tracking-Portfolio-Optimization.ipynb
notebooks/quantitative_methods/: m1_l04_c04_stock_data.ipynb  time_value_of_money.ipynb
src_py/: fct_to_load_prices.py
src_py/_helpers/: data.py  testing.py
src_py/derivatives/: interest_rate_futures.py
src_py/quantitative_methods/: time_value_of_money.py
templates/css/: pytest_report.css
tests/: conftest.py
tests/derivatives/: interest_rate_futures_test.py
tests/helpers/: data_test.py
tests/quantitative_methods/: time_value_of_money_test.py
