[metadata]
name = src_py
version = 0.0.1

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "3.10.11"

[options.packages.find]
include=src_py

[pycodestyle]
count = True
max-line-length = 127
statistics = True

[pydocstyle]
convention = pep257
match = .*\.py

[tool:pytest]
python_files = *_test.py
